<resources>
    <string name="app_name">H2T_DMS_EMPLOYEE</string>
    <string name="cua_hang">"Cửa hàng "</string>
    <string name="nhan_de_xem_chi_tiet_cua_hang"><![CDATA[>> Nhấn vào để xem thông tin chi tiết cửa hàng]]></string>
    <string name="vui_long_tao_marker">Vui lòng tạo marker</string>
    <string name="huy_bo">Hủy bỏ</string>
    <string name="ban_co_chac_muon_tao_diem_khao_sat">Bạn có chắc là bạn muốn tạo điểm khảo sát không?</string>
    <string name="xac_nhan">Xác nhận</string>
    <string name="for_all">Tất cả</string>
    <string name="storeName">Tên cửa hàng</string>
    <string name="hintStoreName">Nhập tên cửa hàng</string>
    <string name="storeOwner">Tên chủ cửa hàng</string>
    <string name="hintStoreOwner">Nhập tên chủ cửa hàng</string>
    <string name="address">Địa chỉ</string>
    <string name="hintAddress">Nhập địa chỉ</string>
    <string name="phoneNumber">Số điện thoại</string>
    <string name="hintPhoneNumber">Nhập số điện thoại</string>
    <string name="storeType">Loại cửa hàng</string>
    <string name="trungBay">Trưng bày</string>
    <string name="viewAndCaptureImage">Xem và chụp ảnh</string>
    <string name="totalImageCapture">0 bức ảnh đã chụp</string>
    <string name="income">Doanh thu (VNĐ/Tháng)</string>
    <string name="hintIncome">Nhập doanh thu</string>
    <string name="competitiveProduct">Mặt hàng đối thủ cạnh tranh</string>
    <string name="hintCompetitiveProduct">Nhập mặt hàng đối thủ cạnh tranh</string>
    <string name="update">Cập nhật</string>
    <string name="previous">Quay về</string>
    <string name="createdDate">Ngày tạo:</string>
    <string name="yes">Đồng ý</string>
    <string name="cancel">Hủy bỏ</string>
    <string name="errorInputIncome">Vui lòng nhập doanh thu</string>
    <string name="errorInputStoreName">Vui lòng nhập tên cửa hàng, tên cửa hàng không được quá 100 kí tự</string>
    <string name="errorInputStoreOwner">Vui lòng nhập tên chủ cửa hàng, tên chủ cửa hàng không được quá 100 kí tự</string>
    <string name="errorInputAddress">Vui lòng nhập địa chỉ</string>
    <string name="errorInputPhoneNumber">Vui lòng nhập số điện thoại,độ dài số điện thoại dài nhất là 11 kí tự</string>
    <string name="errorInputCompetitiveProduct">Vui lòng nhập mặt hàng đối thủ cạnh tranh</string>
    <string name="addStorePointSuccess">Thêm điểm khảo sát thành công</string>
    <string name="errorAddStorePoint">Lỗi: không thể thêm điểm khảo sát</string>
    <string name="captureImage">bức ảnh đã chụp</string>
    <string name="errorInputImage">Vui lòng chụp ít nhất 1 bức ảnh trưng bày quầy kệ</string>
    <string name="done">Hoàn thành</string>
    <string name="add">Thêm</string>
    <string name="updateSuccess">Cập nhật thông tin thành công</string>
    <string name="create">Tạo</string>
    <string name="signIn">Đăng Nhập</string>
    <string name="password">Mật khẩu</string>
    <string name="username">Tên đăng nhập</string>
    <string name="companyName">H2T DMS</string>
    <string name="emptyTrungBay">Hiện chưa có hình ảnh trưng bày cửa hàng nào, Vui lòng nhấn vào nút \'thêm\' để thêm
        hình ảnh trưng bày cửa hàng</string>
    <string name="trackInvoice">Theo dõi đơn hàng</string>
    <string name="storeCaring">Chăm sóc cửa hàng</string>
    <string name="status">Tình trạng:</string>
    <string name="invoiceCreateDate">Ngày đặt hàng</string>
    <string name="invoiceOwner">Người đặt hàng</string>
    <string name="invoice">Đơn hàng</string>
    <string name="pleaseChooseYourAction">Vui lòng chọn công việc mà bạn muốn làm</string>
    <string name="survey">Khảo sát</string>
    <string name="visit">Viếng Thăm</string>
    <string name="pleaseWait">Vui lòng chờ</string>
    <string name="errorPrefix">Vui lòng, nhập</string>
    <string name="errorUsername">tên đăng nhập</string>
    <string name="errorJoin">" và "</string>
    <string name="errorPassword">mật khẩu</string>
    <string name="errorSignIn">Lỗi không đúng tên đăng nhập và mật khẩu</string>
    <string name="invoiceStatus">Tình trạng</string>
    <string name="search">Tìm kiếm</string>
    <string name="invoiceSearch">Tìm kiếm đơn hàng</string>
    <string name="invoiceSearchStore">Cửa hàng:</string>
    <string name="invoiceHintSearchStoreName">Tên cửa hàng</string>
    <string name="invoiceSearchFromDate">Từ ngày:</string>
    <string name="invoiceSearchToDate">Đến ngày:</string>
    <string name="invoiceSearchStatus">Tình trạng đơn hàng</string>
    <string name="invoiceEmpty">Hiện không có đơn hàng nào trong danh sách</string>
    <string name="remove">Xóa</string>
    <string name="deleteImageSuccess">Xóa hình ảnh thành công</string>
    <string name="errorStorePointOutOfPolygon">Chỉ có thể tạo điểm bán hàng ở tuyến đường khảo sát</string>
    <string name="logOut">Đăng xuất</string>
    <string name="updateAreaStatus">Cập nhật trạng thái tuyến đường</string>
    <string name="confirmExit">Ấn nút \'trở về\' lần nữa để thoát chương trình</string>
    <string name="confirmLogOut">Bạn có chắc là bạn muốn đăng xuất ra khỏi chương trình không?</string>
    <string name="approve">Xác nhận</string>
    <string name="errorStreetOrAreaNotFoundForUpdate">Vui lòng chọn tuyến đường/khu vực để hoàn thành</string>
    <string name="areaOnCreated">Mới tạo</string>
    <string name="areaOnSurvey">Đang khảo sát</string>
    <string name="areaOnSuccess">Hoàn thành</string>
    <string name="updateAreaStatusSuccess">"Cập nhật trạng thái tuyến "</string>
    <string name="viewImage">Xem hình ảnh</string>
    <string name="trungBayTitle">Hình ảnh trưng bày quầy kệ</string>
    <string name="updateSurveyPointTitle">Cập nhật chi tiết điểm bán hàng</string>
    <string name="createSurveyStorePointTitle">Tạo điểm khảo sát</string>
    <string name="yourDeviceDoesNotSupportCamera">Thiết bị cầm tay của bạn không hỗ trợ camera!</string>
    <string name="surveyStorePointTitle">Khảo sát các điểm cửa hàng</string>
    <string name="clickToChangeToStorePoint"><![CDATA[>> Nhấn vào để chuyển thành điểm bán hàng sau khi đã ký hợp đồng]]></string>
    <string name="confirmChangeToStorePoint">Bạn có chắc là bạn muốn chuyển điểm cửa hàng này thành điểm bán hàng
        không?</string>
    <string name="confirmChangeStoreStatusTitle">Xác nhận đổi trạng thái điểm cửa hàng</string>
    <string name="signContractFailed">Ký hợp đồng thất bại</string>
    <string name="haveCreateSurveyPoint">" đã tạo điểm khảo sát"</string>
    <string name="failed">" thất bại"</string>
    <string name="signContractWith">" ký hợp đồng với cửa hàng "</string>
    <string name="success">" thành công"</string>
    <string name="createSurveyPoint">Tạo điểm khảo sát</string>
    <string name="GPSAlertDialogTitle">Thiết lập GPS</string>
    <string name="GPSAlertDialogMessage">Bạn chưa bật GPS. Bạn có muốn vào chỉnh thiết lập không?</string>
    <string name="settings">Thiết lập</string>
    <string name="latitude">Latitude : </string>
    <string name="longitude">Longitude : </string>
    <string name="country">Đất nước : </string>
    <string name="city">Thành phố : </string>
    <string name="postalCode">Postal Code : </string>
    <string name="addressLine">Địa chỉ đường : </string>
    <string name="pleaseSelectAtLeastOneStoreBelow">Vui lòng chọn 1 trong các cửa hàng bên dưới</string>
    <string name="errorThereAreNoStoreNear">Hiện không có cửa hàng nào trong khoảng 300m gần nơi bạn đang đứng
        . Vui lòng thử lại sau.</string>
    <string name="visiting">"đang viếng thăm"</string>
    <string name="descriptionStoreOwner">"-Chủ cửa hàng: "</string>
    <string name="createNewInvoice">Lập đơn hàng</string>
    <string name="customerFeedBack">Phản hồi</string>
    <string name="debtStatus">Tình trạng công nợ</string>
    <string name="history">Lịch sử</string>
    <string name="needInternetAccessToLogin">Cần phải có kết nói internet để đăng nhập</string>
    <string name="hintSearchProductName">Tìm tên sản phẩm</string>
    <string name="productEmpty">Hiện không có sản phẩm nào trong danh mục</string>
    <string name="totalCost">Tổng giá tiền:</string>
    <string name="list_product_ex_name">Name</string>
    <string name="list_product_ex_unit">Unit</string>
    <string name="list_product_ex_price">Price</string>
    <string name="VND">VNĐ</string>
    <string name="productName">Tên sản phẩm</string>
    <string name="photo">Hình</string>
    <string name="amount">Số lượng</string>
    <string name="unit">ĐVT</string>
    <string name="pricePerUnit">Giá / 1 ĐVT</string>
    <string name="titleFeedBackCustomer">Phản hồi khách hàng</string>
    <string name="title">Tiêu đề</string>
    <string name="description">Nội dung</string>
    <string name="sentFeedbackSuccess">Gửi thông tin phản hồi cửa hàng thành công</string>
    <string name="haveSentFeedbackToYou">" đã gửi 1 thông tin phản hồi đến cho bạn."</string>
    <string name="haveOrdered">Đã đặt hàng:\n</string>
    <string name="resultTotalPayEqual">"Tiền phải trả = "</string>
    <string name="createInvoice">Lập hóa đơn</string>
    <string name="confirmCreateNewInvoice">Bạn có chắc là bạn muốn lập hóa đơn này.</string>
    <string name="createInvoiceSuccess">Tạo hóa đơn bàn hàng thành công</string>
    <string name="pleaseWaitTitle">Vui lòng chờ...</string>
    <string name="loadingPleaseWait">Đang tải dữ liệu, vui lòng chờ...</string>
    <string name="of">của</string>
    <string name="MOI_TAO">mới tạo</string>
    <string name="DANG_XU_LY">đang xử lý</string>
    <string name="DA_THANH_TOAN">đã thanh toán</string>
    <string name="invoiceManagementTitle">Quản lý thông tin đơn hàng</string>
    <string name="visitStorePointTitle">Viếng thăm điểm bán hàng</string>
    <string name="invoiceHistoryTitle">Xem lịch sử đơn hàng</string>
    <string name="invoiceNewTitle">Thêm đơn hàng mới</string>
    <string name="prmotionDialogTitle">Thông tin khuyến mãi</string>
    <string name="promotionType1">Loại khuyến mãi: \'Tặng phẩm\'\n</string>
    <string name="promotionBuyMsg">"- Mua "</string>
    <string name="prmotionGiftMsg">tặng</string>
    <string name="promotionType2">Loại khuyến mãi: \'Chiết khấu\'\n</string>
    <string name="willBeDiscountedMsg">" sẽ được giảm giá "</string>
    <string name="promotionS">Khuyến mãi:</string>
    <string name="sGift">Tặng</string>
    <string name="viewReport">Xem báo cáo</string>
    <string name="loadDebt">Đang tải dữ liệu công nợ...</string>
    <string name="userOrPasswordIncorrect">Tên tài khoản hoặc mật khẩu không đúng</string>
    <string name="realIncome">Thực thu</string>
    <string name="doanhThuThucThuChart">1. Biểu đồ doanh thu, thực thu</string>
    <string name="diemCuaHangChart">2. Biểu đồ tình trạng điểm cửa hàng</string>
    <string name="CHO_CAP_TREN">Chờ cấp trên</string>
    <string name="BAN_HANG">Bán hàng</string>
    <string name="DANG_THOA_THUAN">Đang thỏa thuận</string>
    <string name="KHAO_SAT">Khảo sát</string>
    <string name="KHONG_DU_TIEU_CHUAN">Không đủ tiêu chuẩn</string>
    <string name="TIEM_NANG">Tiềm năng</string>
    <string name="donHangChart">3. Biểu đồ tình trạng đơn hàng</string>
    <string name="quantity">Số lượng</string>
    <string name="soLuongHangBanChart">4. Biểu đồ số lượng hàng bán</string>
    <string name="fromDate">Từ ngày</string>
    <string name="fromDateHint">Từ ngày...</string>
    <string name="toDate">Đến ngày</string>
    <string name="toDateHint">Đến ngày...</string>
    <string name="reportTitle">Báo cáo</string>
    <string name="debtInYellowStatus">Hiện tại công nợ của cửa hàng đang ở mức cảnh báo, vui lòng nhắc nhở chủ cửa
        hàng thanh toán.</string>
    <string name="warning">Lưu ý</string>
    <string name="danger">Cảnh báo</string>
    <string name="debtInRedStatus">Không thể tạo được đơn hàng vì công nợ vượt quá mức đỏ, vui lòng gửi phản
        hồi lên nhân viên quản lý để được gia hạn công nợ.</string>
    <string name="confirmOut">Nhấn nút \'quay về\' lần nữa để thoát ứng dụng</string>
</resources>