<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    xmlns:bootstrap="http://schemas.android.com/apk/res-auto">
        <EditText
                android:layout_marginTop="10dp"
                android:id="@+id/activity_invoice_new_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hintSearchProductName"
                android:drawablePadding="10dp"
                android:layout_margin="5dp"
                android:singleLine="true"
                android:drawableStart="@drawable/ic_action_search"
                android:drawableLeft="@drawable/ic_action_search"
                />

    <LinearLayout
            android:id="@+id/activity_invoice_new_column"
            android:layout_below="@id/activity_invoice_new_search"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rowselector"
            android:padding="3dp"
            android:gravity="center"
            >

        <TextView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/photo"
                style="?android:textAppearanceLarge"
                android:gravity="center"/>

        <View
                android:background="#000000"
                android:layout_width="1dp"
                android:layout_height="match_parent"/>
        <TextView
                android:id="@+id/list_product_tv_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/productName"
                style="?android:textAppearanceLarge"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:gravity="center"/>
        <View
                android:background="#000000"
                android:layout_width="1dp"
                android:layout_height="match_parent"/>
        <TextView
                android:id="@+id/list_product_et_amount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/amount"
                android:textSize="16sp"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:gravity="center"/>
        <View
                android:background="#000000"
                android:layout_width="1dp"
                android:layout_height="match_parent"/>
        <TextView
                android:id="@+id/list_product_tv_unit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/unit"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                style="?android:textAppearanceLarge"
                android:gravity="center"
                />
        <View
                android:background="#000000"
                android:layout_width="1dp"
                android:layout_height="match_parent"/>
        <TextView
                android:id="@+id/list_product_tv_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/pricePerUnit"
                android:layout_weight="3"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                style="?android:textAppearanceLarge"
                android:gravity="center"
                />
    </LinearLayout>
        <ListView
                android:layout_below="@id/activity_invoice_new_column"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/activity_invoice_new_listview">
        </ListView>
        <TextView
                android:id="@+id/activity_invoice_new_tv_empty_product"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:padding="10dp"
                android:text="@string/productEmpty"
                android:gravity="center"
                style="?android:textAppearanceLarge"/>
        <TextView
                android:id="@+id/activity_invoice_new_tv_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/totalCost"
                style="?android:textAppearanceLarge"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_margin="10dp"/>
    </RelativeLayout>
