<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:bootstrap="http://schemas.android.com/apk/res-auto"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                tools:context=".MainActivity"
        >
    <TextView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:id="@+id/activity_main_iv_photo"
            android:layout_gravity="center_horizontal"
            android:text="@string/companyName"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:textSize="50sp"
            android:textStyle="bold"
            android:background="#4990CC"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"/>
    <com.H2TFC.H2T_DMS_EMPLOYEE.widget.AutofitTextView
            android:id="@+id/activity_main_tv_vuilong"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pleaseChooseYourAction"
            android:gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="100dp"
            android:singleLine="true"
            style="?android:textAppearanceLarge"
            android:layout_below="@+id/activity_main_iv_photo"/>
    <com.beardedhen.androidbootstrap.BootstrapButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/survey"
            android:id="@+id/activity_main_btn_khaosat"
            android:layout_below="@+id/activity_main_tv_vuilong"
            bootstrap:bb_type="primary"
            bootstrap:bb_roundedCorners="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textSize="20sp"
            />
        <com.beardedhen.androidbootstrap.BootstrapButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/visit"
                android:id="@+id/activity_main_btn_viengtham"
                android:layout_below="@+id/activity_main_btn_khaosat"
                bootstrap:bb_type="primary"
                bootstrap:bb_roundedCorners="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:textSize="20sp"
                />
</RelativeLayout>

