<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:bootstrap="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="horizontal"
              android:baselineAligned="true">
    <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="match_parent"
            android:background="#CCCCCC"
            android:orientation="vertical"
            android:padding="1dp">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/invoiceSearch"
                style="?android:textAppearanceLarge"
                android:gravity="center"
                android:padding="5dp"
                android:background="@color/white"
                android:drawableLeft="@android:drawable/ic_menu_search"
                android:drawableStart="@android:drawable/ic_menu_search"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical"
                android:layout_margin="10dp"
                android:padding="5dp">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="5dp">
                <TextView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:text="@string/invoiceSearchFromDate"/>
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="date"
                        android:textSize="16sp"
                        android:focusable="false"
                        android:id="@+id/activity_invoice_management_et_from_date"
                        />
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="5dp">
                <TextView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:text="@string/invoiceSearchToDate"/>
                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:inputType="date"
                        android:focusable="false"
                        android:id="@+id/activity_invoice_management_et_to_date"
                        />
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="5dp">
                <TextView
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:text="@string/invoiceStatus"/>
                <com.H2TFC.H2T_DMS_EMPLOYEE.utils.MultiSpinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:spinnerMode="dropdown"
                        android:id="@+id/activity_invoice_management_spinner_status"
                        />
            </LinearLayout>
        </LinearLayout>
        <com.beardedhen.androidbootstrap.BootstrapButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/search"
                bootstrap:bb_type="primary"
                android:id="@+id/activity_invoice_management_btn_search"
                bootstrap:bb_roundedCorners="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"/>
    </LinearLayout>
    <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="6"
            android:layout_height="match_parent"
            android:padding="1dp"
            android:orientation="vertical">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/invoiceSearchStatus"
                style="?android:textAppearanceLarge"
                android:padding="5dp"
                android:gravity="center_horizontal"/>
        <View
              android:background="#CCCCCC"
              android:layout_width="match_parent"
              android:layout_height="1px"/>
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <ListView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/activity_invoice_management_lv_invoice"/>
            <TextView
                    android:id="@+id/activity_invoice_tv_empty"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/invoiceEmpty"
                    style="?android:textAppearanceLarge"
                    android:gravity="center"/>
        </RelativeLayout>

    </LinearLayout>
</LinearLayout>