<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              xmlns:bootstrap="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <com.beardedhen.androidbootstrap.BootstrapEditText
            android:id="@+id/dialog_login_et_tendangnhap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            bootstrap:be_roundedCorners="true"
            bootstrap:be_state="default"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:drawablePadding="10dp"
            android:drawableLeft="@drawable/ic_username"
            android:drawableStart="@drawable/ic_username"
            />

    <com.beardedhen.androidbootstrap.BootstrapEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/dialog_login_et_matkhau"
            bootstrap:be_roundedCorners="true"
            bootstrap:be_state="default"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/password"
            android:drawablePadding="10dp"
            android:drawableLeft="@drawable/ic_password"
            android:drawableStart="@drawable/ic_password"
            android:singleLine="true"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:orientation="horizontal">
                <com.beardedhen.androidbootstrap.BootstrapButton
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/signIn"
                        android:id="@+id/dialog_login_btn_dangnhap"
                        android:layout_weight="1"
                        bootstrap:bb_type="primary"
                        bootstrap:bb_roundedCorners="true"
                        android:layout_marginRight="5dp"
                        android:textSize="20sp"
                        />
                <com.beardedhen.androidbootstrap.BootstrapButton
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/cancel"
                        android:id="@+id/dialog_login_btn_huy"
                        bootstrap:bb_type="danger"
                        bootstrap:bb_roundedCorners="true"
                        android:layout_marginLeft="5dp"
                        android:layout_marginStart="20dp"
                        android:textSize="20sp"
                        />
        </LinearLayout>

</LinearLayout>